src/css/components.css
.site-header {
	background-color: $coal;
	color: #fff;
	font-family: $font-secondary;
	z-index: 10;

	&__icons {
		position: fixed;
		top: 0;
		left: 0;
		z-index: 10;
		background-color: $coal;
		padding: 0.5rem;
		display: flex;
		align-items: center;
		justify-content: center;
		@media (max-width: 700px) {
			position: absolute;
		}
	}
}

.blog-logo {
	display: block;
	height: 1.777rem;
	width: 1.777rem;
	margin-right: 1rem;

	&__image {
		max-height: 100%;
	}
}

.hamburger {
	font-size: 0;
	margin-right: 0.5rem;

	&::before {
		font-size: 1.2rem;
	}
}

.owl-carousel {
	@extend .subtle-shadow;
}

.owl-dots {
	position: absolute;
	bottom: 5%;
	left: 0;
	width: 100%;
	text-align: center;
}

.owl-dot {
	display: inline-block;
	padding: 0.25rem;

	span {
		display: inline-block;
		width: 1rem;
		height: 1rem;
		border: 1px solid #fff;
		border-radius: 100%;
		background-color: rgba(255,255,255,0.3);
		opacity: 0.25;
		transition: 0.318s ease opacity;
	}

	&.active span {
		opacity: 0.6;
	}
}

.owl-nav {
	position: absolute 0 0;
	pointer-events: none;
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.owl-prev,
.owl-next {
	transition: 0.318s ease all;
	font-size: 0;
	color: #ffffff;
	pointer-events: auto;

	&.disabled {
		opacity: 0.1;
	}

	&::before {
		font-family: icons;
		font-size: 2.5rem;
	}

	@media (max-width: 700px) {
		display: none;
	}
}

.owl-prev {
	margin-left: 3rem;

	&::before {
		content: "e";
	}

	&:hover {
		margin-left: 2rem;
		padding-right: 1rem;
	}
}

.owl-next {
	margin-right: 3rem;

	&::before {
		content: "f";
	}

	&:hover {
		margin-right: 2rem;
		padding-left: 1rem;
	}
}

.site-footer {
	font-family: $font-secondary;
	font-size: $fs-small;
	padding-top: 1rem;
	padding-bottom: 1rem;
	color: #999;
}

.copyright-notice {
	color: #777;
}

.credit-link {
	float: right;
}

.footer-nav {
	text-transform: uppercase;
	margin-bottom: 1rem;

	&__item {
		margin-right: 1.5rem;
		display: inline-block;
	}
}

.primary-nav {
	position: absolute;
	bottom: 100%;
	width: 100%;
	background-color: $coal;
}

#nav:target .primary-nav {
	position: static;
}

.nav {
	text-transform: uppercase;
	list-style: none;
	padding: 0;
	margin: 0;
	font-size: $fs-small;
	letter-spacing: 0.07rem;

	a {
		display: block;
		border-bottom: 1px solid #323232;
		padding: 0.5rem 0;
		color: #EBC66F;
	}

	li:last-child a {
		border-bottom: none;
	}
}

.author-info {

	&__image {
		margin-bottom: 1rem;
		@media (min-width: 900px) {
			float: left;
			margin-left: -7rem;
		}
	}

	&__by {
		text-transform: uppercase;
		font-size: $fs-tiny;
		letter-spacing: $ls-looser;
		opacity: 0.5;
	}

	&__name {
		margin-top: 0;
	}

	&__bio {
		font-size: $fs-small;
		letter-spacing: $ls-loose;
		line-height: calc($baseline / 1.25);
		opacity: 0.8;
	}

	&__website, &__location {
		margin-right: 2rem;
		font-size: $fs-tiny;
		letter-spacing: $ls-looser;
		text-transform: uppercase;

		@media (max-width: 600px) {
			display: block;
			margin-bottom: $baseline;
		}

		&::before {
			margin-right: 0.5rem;
			font-size: 0.75rem;
			position: relative;
			top: 0.15em;
		}
	}

	&__website {
		color: #EBC66F;
	}
}

.all {
	display: none;
}

#all:target {
	.all {
		display: block;
	}

	.owl-carousel {
		display: none;
	}
}

.post-date {
	font-size: $fs-small;
	text-transform: uppercase;
	letter-spacing: $ls-looser;
}



.author-image {
	@extend .round;
	max-width: 5rem;
}

.post-listing {
	margin-bottom: 3rem;

	&__title {
		text-transform: none;
		margin-top: 0;
		margin-bottom: 0;
	}

	&__date {
		@extend .subdue;
		font-family: $font-secondary;
	}

	&__excerpt {
		margin-top: 0.5em;
	}

	&__media {
		margin-bottom: 1rem;
	}

	@media (min-width: 650px) {
		lost-flex-container: row;

		&__media {
			lost-column: 1/3;
		}

		&__body {
			lost-column: 2/3;
		}
	}
}


.author {
	display: flex;
	align-items: center;
	justify-content: center;
	margin-bottom: calc($baseline / 2);

	&__image {
		@extend .round;
		width: 1.777rem !important;
		float: left;
		margin-right: 1rem;
	}

	&__name {
		text-transform: uppercase;
		font-weight: bold;
		letter-spacing: $ls-looser;
		font-size: $fs-small;
	}
}

